root/css/main.css
/* ... */
/*********************************

   Per-Page styling

*********************************/

/* =========================================
   FOOTER ================================== */

#footer{
    color:#CCC;
    background:black;
    margin:0;
    overflow:auto;
    position:relative;
    width:100%;
    clear:both;
    padding: 1.5em 1.5em 1em;
}

#footer a{
  color:white;
}
#footer a:hover{
  color:#6FA2D9;
}

#footercredit {
    font-size:0.9em;
    line-height:1.4em;
}
#footercredit a{
  color:#6FA2D9;
}

#footer .credit-badge-container {
  margin-bottom: 0.5em;
}

#footer .credit-badge {
  display: inline-block;
  margin: 0.5em 0.5em 0.5em 0;
  vertical-align: middle;
}

#footer .credit-text-container {
  max-width: 70%;
}

#footermeta {
    float:left;
}


#footer #footer-nav {
    position:relative;
}


#footer .footer-column {
  float:left;
  display: inline-block;
  width:12em;
}

.footer-column .footer-title {
    font-weight: bold;
    margin-bottom: 1em;
    white-space: nowrap;
    font-size:1.1em;
    color:#eee;
}


#footer ul, #footer li {
    list-style:none;
    margin-left:0;
    padding-left:0;
}

#footer #footer-nav li a, #footer li>span {
    line-height:2em;
    font-size:0.9em;
    white-space:nowrap;
    color:#aaa;
}

#footer li>span {
    color:#eee;
}

.social-icons {
  background-image:url('/img/new-icons.png');
  height:30px;
  width:30px;
  background-position:0px 0px;
}

#footermeta a{
  height:30px;
  width: 30px;
  overflow: hidden;
  float:right;
  margin-right: 10px;
}

#footer-mail .social-icons  {
  background-position:-30px -20px;
}

#footer-mail .social-icons:hover  {
  background-position:-30px -50px;
}

#footer-tweet .social-icons  {
  background-position:-60px -20px;
}
#footer-tweet .social-icons:hover  {
  background-position:-60px -50px;
}

#footer-rss .social-icons  {
  background-position:0px -20px;
}
#footer-rss .social-icons:hover  {
  background-position:0px -50px;
}

/*********************************

         REPORTS

*********************************/

.returned {
   display:none;
   padding:0 0 0.5em 1em;
}

.superscript      { vertical-align:super;
                    font-size:0.8em;
                  }


/* Formatting for column selection dropdown */

div.columns {
  float:left;
  position:relative;
  cursor:pointer;
  margin:0 0.5em;
}

div.columns ul {
  width:10em;
  position:absolute;
  z-index:999;
  top:100%;
  left:0em;
  background:white;
  margin:0;
  padding:0;
  border:1px solid #AAA;
  display:none;
}

div.columns ul li{
  list-style: none;
  position:relative;
  display:block;
  float:none;
  padding:0.4em;
  margin:0;
  font-size:0.9em;
}

div.columns:hover .button {
  background:#BBB;
}

.sidebar-hidden #open-sidebar [hidden], .show-empty #hide-empty-fields [hidden]{
  display:inline;
}

.sidebar-hidden #open-sidebar span:not([hidden]), .show-empty #hide-empty-fields span:not([hidden]){
  display:none;
}

div.columns .ui-icon-triangle-1-s {
  opacity:0.5;
  filter:alpha(opacity=50);
  -moz-opacity:0.5;
}

div.columns ul li:not(.title):hover{
  background: #FFFFDF;
}

div.columns ul li.title {
  border-top:1px solid #CDCDCD;
  cursor:auto;
  font-weight:bold;
}

div.columns div.ui-icon-close{
  float:right;
  opacity:0.5;
  filter:alpha(opacity=50);
  -moz-opacity:0.5;
}

div.columns ul div input#layout-input {
  width:97%;
  color: #999999;
  margin:0;
  padding:0;
}

div.columns ul li.multCol div#msg {
  display:none;
}

div#column-dropdown ul li.multCol.ui-state-disabled div#msg {
  display:block;
  float:right;
  font-size:0.8em;
}

div#column-dropdown ul li.ui-state-disabled:hover {
  background:white;
}

/* END Formatting for column selection dropdown */


#page-title-wrapper {
  margin: 0 -1em -2.2em 175px;
  position: relative;
  top: -2.2em;
  width: calc(100% - 160px);
  display: table;
  z-index: 10;
}

#page-title {
  height: 3em;
  display: table-cell;
  width: 100%;
  vertical-align: middle;
  padding: 0.5em 1.5em 0.25em;
}

#page-title.search-bg {
  height:auto;
}

#page-title h2 {
  font-size:24px;
  color:#222;
  /* white-space:nowrap; */
  position:relative;
}

#page-title .bench-update{
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 15;
}

#page-title h2 .note {
  font-size:0.5em;
  font-weight:normal;
  position:absolute;
  bottom:1.6em;
  left:6em;
  color:#333;
}

#page-title .assembly-name {
  color: #333;
  margin-left: 5px;

}

#page-title h2 .assembly-name {
  font-size: 0.6em;
  font-weight: normal;
}

/*********************************

           WIDGETS

   ********************************* */

/* Styles for the standard widget */

li div.widget-container {
  padding:0;
  margin:0 0 0.7em 0.7em;
  display:none;
  background-color:#FFFFFF;
  position:relative;
  border:1px solid #97A1AD;
}


div.widget-container:hover{

  -moz-box-shadow:    1px 2px 1px 1px #ccc;
  -webkit-box-shadow: 1px 2px 1px 1px #ccc;
  box-shadow:         1px 2px 1px 1px #ccc;

}

.content {
  padding: 1em 1em 1.8em 1em;
  overflow-x:scroll;
  overflow-y:hidden; /* seems to fix vertical scroll issue in Safari */
  list-style:disc outside none;
  clear:both;
  font-size:0.9em;
}

.widget-header, .species-bg, .search-bg, .species_list-bg  {
    background-color: #C2D1DF;
}

.widget-container:hover #widget-footer,
.widget-header:hover .ui-icon,
.widget-container:hover .widget-header .ui-icon-large,
li.visible div.widget-container {
    display:block;
}

.widget-container #widget-feed,
.widget-container #widget-footer,
.widget-header .ui-icon,
.widget-container.minimized:hover #widget-footer{
    display:none;
}

.widget-header h3 {
  margin:0px;
  padding:0.3em 0.3em 0.5em;
  border:0;
  height:1em;
  cursor:pointer;
}

.widget-container #widget-footer {
  position:absolute;
  bottom:0.4em;
  right:0.3em;
}

#widget-footer a {
  padding:0 0.3em;
  margin:0 0.2em;
}

.widget-header .ui-icon {
  margin:0.2em;
}

.widget-header div.ui-icon-large {
  float:right;
  cursor:pointer;
  margin:0.4em;
}
/* ... */

